# rust-template-test

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  codecov.yml  flake.nix  release-please-config.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: coverage.yml  release.yml  tests_and_checks.yml
template-test/: CHANGELOG.md  Cargo.toml  README.md
template-test-wasm/: CHANGELOG.md  Cargo.toml  README.md
template-test-wasm/src/: lib.rs
template-test-wasm/tests/: web.rs
template-test/src/: main.rs
template-test/tests/: integration_test.rs
