[package]
name = "template-test"
version = "0.1.0"
description = "ased"
keywords = []
categories = []
license = "Apache-2.0 or MIT"
readme = "README.md"
edition = "2021"
documentation = "https://docs.rs/template-test"
repository = "https://github.com/bgins/template-test/tree/main/template-test"
authors = ["Brian Ginsburg <gins@brianginsburg.com>"]

[[bin]]
name = "template-test"
path = "src/main.rs"
doc = true

[dependencies]

tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = []
